fix dropdown on IE7

--- a/web/eXoResources/src/main/webapp/skin/DefaultSkin/webui/component/UIDropDownControl/Stylesheet.css
+++ b/web/eXoResources/src/main/webapp/skin/DefaultSkin/webui/component/UIDropDownControl/Stylesheet.css
@@ -2,8 +2,12 @@
 .UIDropDownControl {
 	position: relative ;
 	margin-bottom: 2px;
-	_position: static;
 }
+
+.UIDropDownControl .UIDropDownAnchor {
+	width: 100%;
+}
+
 .UIDropDownControl .UIDropDownTitle {
 	background:white url(background/DropDownItemSelectorBG1x2.gif) repeat-x scroll center top;
 	border:1px solid #929292;
